--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,8 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.simonhauck.actintellijplugin
-pluginName = act-intellij-plugin
+pluginGroup = io.github.simonhauck
+pluginName = github-act
 pluginRepositoryUrl = https://github.com/simonhauck/act-intellij-plugin
-# SemVer format -> https://semver.org
-pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 233
@@ -19,9 +17,6 @@ platformVersion = 2023.3.8
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
 platformBundledPlugins =
-
-# Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.10.2
 
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
