--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,16 +5,18 @@ junit = "4.13.2"
 # plugins
 changelog = "2.2.1"
 intelliJPlatform = "2.1.0"
-kotlin = "1.9.25"
-kover = "0.8.3"
-qodana = "2024.2.3"
+kotlinVersion = "1.9.25"
 
 [libraries]
+# Plugins that are used in buildLogic
+kotlinPlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinVersion" }
+ktfmtPlugin = { module = "com.ncorti.ktfmt.gradle:plugin", version = "0.22.0" }
+testLoggerPlugin = { module = "com.adarshr:gradle-test-logger-plugin", version = "4.0.0" }
+
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
 intelliJPlatform = { id = "org.jetbrains.intellij.platform", version.ref = "intelliJPlatform" }
-kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
-qodana = { id = "org.jetbrains.qodana", version.ref = "qodana" }
+kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlinVersion" }
+releasePlugin = { id = "io.github.simonhauck.release", version = "1.4.0" }
