--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.simonhauck.actintellijplugin</id>
-    <name>act-intellij-plugin</name>
+    <id>com.github.simonhauck.github-act</id>
+    <name>github-act</name>
     <vendor>simonhauck</vendor>
 
     <depends>com.intellij.modules.platform</depends>
