--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,13 +12,14 @@
 #
 ## JBIJPPTPL
 
+
+# TODO: Scout changes and include in custom workflow
 name: Build
 on:
   # Trigger the workflow on pushes to only the 'main' branch (this avoids duplicate checks being run e.g., for dependabot pull requests)
-  push:
-    branches: [ main ]
-  # Trigger the workflow on any pull request
-  pull_request:
+
+  workflow_dispatch:
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
