--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -37,7 +37,7 @@ jobs:
             ~/.gradle/wrapper
             ./**/.gradle
             ./**/build
-            ~/.pluginVerifier
+#            ~/.pluginVerifier
 
       - name: Run Build & Test
         run: ./gradlew build --no-daemon
