--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,15 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
-
-pluginName = github-act
-
+pluginName=github-act
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 233
-pluginUntilBuild = 242.*
-
+pluginSinceBuild=233
+pluginUntilBuild=242.*
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2023.3.8
-
-# Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-platformPlugins =
-# Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins =
-
+platformType=IC
+platformVersion=2023.3.8
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
-kotlin.stdlib.default.dependency = false
-
+kotlin.stdlib.default.dependency=false
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
-org.gradle.configuration-cache = true
-org.gradle.caching = true
-org.gradle.parallel = true
+org.gradle.configuration-cache=true
+org.gradle.caching=true
+org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx3000m
